--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-<FilesMatch "apple-app-site-association">
-  ForceType application/pkcs7-mime
-</FilesMatch>
+<Files [^.]+>
+ForceType application/pkcs7-mime
+</Files>
