--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-<Files [^.]+>
-ForceType application/pkcs7-mime
-</Files>
+<FilesMatch "apple-app-site-association">
+ ForceType application/pkcs7-mime
+</FilesMatch>
